Refactor search and controllers; unify stylesheets usage
Replaced `access.css` with `general.css` across FXML files to ensure consistent styling. Refactored `SearchController` to improve search logic, handle empty states, and optimize content display using APIs. Fixed method and variable naming inconsistencies in controllers for better clarity and standardization.