@@ -12,12 +12,14 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -28,23 +30,62 @@ import java.util.concurrent.Executors;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class TMDbApiManager {
     private static final String BASE_URL = "https://api.themoviedb.org/3";
-    private static final String API_KEY = "";
-    private static final String LANGUAGE = "en-US";
+    private static final String API_KEY = ""; // IMPORTANT: Set your TMDb API Key here!
+    private static final String LANGUAGE = "en-US"; // Default language
     private static final String IMAGE_BASE_URL = "https://image.tmdb.org/t/p/";
     private static final String DEFAULT_IMAGE_SIZE = "w500";
+    private static final String BACKDROP_IMAGE_SIZE_DETAILS = "w1280"; // For film scene background
+    private static final String STILL_IMAGE_SIZE = "w300"; // For episode stills
+
 
     private static volatile TMDbApiManager instance;
     private final OkHttpClient client;
-
     private final ExecutorService executor;
     private ContentDao contentDao;
     private final ContentCacheManager cacheManager;
 
     public enum ContentType {
-        MOVIE, TV
+        MOVIE, TV, UNKNOWN
+    }
+
+    // Helper classes for TV Season/Episode details from TMDb API
+    public static class ApiSeasonDetails {
+        public int seasonNumber;
+        public String name;
+        public String overview;
+        public String posterPath; // Relative path
+        public List<ApiEpisodeDetails> episodes;
+        public String airDate;
+        public int id; // TMDb season ID
+
+        public ApiSeasonDetails() {
+            episodes = new ArrayList<>();
+        }
+
+        // Convenience method to get full poster URL
+        public String getFullPosterUrl(String size) {
+            return TMDbApiManager.getInstance().getImageUrl(posterPath, size);
+        }
+    }
+
+    public static class ApiEpisodeDetails {
+        public int episodeNumber;
+        public String name;
+        public String overview;
+        public String stillPath; // Relative path
+        public int runtime; // in minutes
+        public String airDate;
+        public double voteAverage;
+        public int id; // TMDb episode ID
+
+        // Convenience method to get full still URL
+        public String getFullStillUrl(String size) {
+            return TMDbApiManager.getInstance().getImageUrl(stillPath, size);
+        }
     }
 
 
@@ -52,12 +93,14 @@ public class TMDbApiManager {
         this.client = new OkHttpClient.Builder()
                 .addInterceptor(new AuthInterceptor())
                 .build();
-        this.executor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
+        this.executor = Executors.newCachedThreadPool();
         this.cacheManager = ContentCacheManager.getInstance();
     }
 
-
     public static TMDbApiManager getInstance() {
+        if (API_KEY == null || API_KEY.trim().isEmpty()) {
+            System.err.println("FATAL ERROR: TMDb API Key is not set in TMDbApiManager.java");
+        }
         if (instance == null) {
             synchronized (TMDbApiManager.class) {
                 if (instance == null) {
@@ -68,7 +111,10 @@ public class TMDbApiManager {
         return instance;
     }
 
-    // Setter for ContentDao dependency injection
+    public ExecutorService getExecutor() {
+        return executor;
+    }
+
     public void setContentDao(ContentDao contentDao) {
         this.contentDao = contentDao;
     }
@@ -79,17 +125,11 @@ public class TMDbApiManager {
         public Response intercept(Chain chain) throws IOException {
             Request original = chain.request();
             HttpUrl originalHttpUrl = original.url();
-
-            HttpUrl url = originalHttpUrl.newBuilder()
-                    // Authorization header is now preferred for the API key by TMDb
-                    // .addQueryParameter("api_key", API_KEY) // Deprecated way
-                    .build();
-
+            HttpUrl url = originalHttpUrl.newBuilder().build();
             Request.Builder requestBuilder = original.newBuilder()
                     .url(url)
                     .header("accept", "application/json")
-                    .header("Authorization", "Bearer " + API_KEY); // Correct way
-
+                    .header("Authorization", "Bearer " + API_KEY);
             Request request = requestBuilder.build();
             return chain.proceed(request);
         }
@@ -100,17 +140,11 @@ public class TMDbApiManager {
         if (parsedUrl == null) {
             throw new IllegalArgumentException("Malformed URL for endpoint: " + endpointPathAndQuery);
         }
-
         HttpUrl.Builder urlBuilder = parsedUrl.newBuilder();
-        if (parsedUrl.queryParameter("language") == null) {
+        if (!endpointPathAndQuery.startsWith(IMAGE_BASE_URL) && parsedUrl.queryParameter("language") == null) {
             urlBuilder.addQueryParameter("language", LANGUAGE);
         }
-        // API key is added by AuthInterceptor via header
-
-        return new Request.Builder()
-                .url(urlBuilder.build())
-                .get()
-                .build();
+        return new Request.Builder().url(urlBuilder.build()).get().build();
     }
 
     public String makeRequest(String endpoint) throws IOException {
@@ -134,17 +168,13 @@ public class TMDbApiManager {
             try {
                 return makeRequest(endpoint);
             } catch (IOException e) {
-                // Log the error with more details
                 System.err.println("TMDbApiManager: API request failed for endpoint: " + endpoint + ". Error: " + e.getMessage());
                 throw new RuntimeException("API request failed for endpoint: " + endpoint, e);
             }
         }, executor);
     }
 
-    // fetchAsMoviestarContentList remains largely the same, but ensure it maps fields correctly
-    // to your Content model, especially if you've added/changed fields.
-    // The default Film_Url is now handled by the database schema or ContentDao.insertContents.
-    public CompletableFuture<List<Content>> fetchAsMoviestarContentList(String endpoint, ContentType expectedType) {
+    public CompletableFuture<List<Content>> fetchAsMoviestarContentList(String endpoint, @Nullable ContentType expectedType) {
         return makeRequestAsync(endpoint).thenApplyAsync(responseString -> {
             List<Content> contentList = new ArrayList<>();
             if (responseString == null || responseString.isEmpty()) {
@@ -158,78 +188,204 @@ public class TMDbApiManager {
                 if (resultsArray != null) {
                     for (JsonElement element : resultsArray) {
                         if (element.isJsonObject()) {
-                            JsonObject TMDbObjectJson = element.getAsJsonObject();
-                            int id = TMDbObjectJson.has( "id") ? TMDbObjectJson.get("id").getAsInt() : 0;
+                            JsonObject tmdbObjectJson = element.getAsJsonObject();
+                            int id = tmdbObjectJson.has("id") ? tmdbObjectJson.get("id").getAsInt() : 0;
+                            if (id == 0) continue;
 
-                            if ( id == 0) continue;
+                            ContentType currentItemType = expectedType;
+                            if (expectedType == ContentType.UNKNOWN) {
+                                String mediaTypeStr = getStringOrNull(tmdbObjectJson, "media_type");
+                                if ("movie".equalsIgnoreCase(mediaTypeStr)) currentItemType = ContentType.MOVIE;
+                                else if ("tv".equalsIgnoreCase(mediaTypeStr)) currentItemType = ContentType.TV;
+                                else continue;
+                            }
+                            if (currentItemType == null) continue;
 
                             Content content = cacheManager.get(id);
-                            boolean isNewInCache  = false;
                             if (content == null) {
                                 content = new Content();
-                                content.setId(id );
+                                content.setId(id);
+                                content.setPlot(getStringOrNull(tmdbObjectJson, "overview"));
+                                content.setRating(tmdbObjectJson.has("vote_average") ? tmdbObjectJson.get("vote_average").getAsDouble() : 0.0);
+                                content.setPopularity(tmdbObjectJson.has("popularity") ? (int) tmdbObjectJson.get("popularity").getAsDouble() : 0);
 
-                                isNewInCache = true;
-                            }
+                                String posterPath = getStringOrNull(tmdbObjectJson, "poster_path");
+                                String backdropPath = getStringOrNull(tmdbObjectJson, "backdrop_path");
+                                content.setImageUrl(getImageUrl(backdropPath, DEFAULT_IMAGE_SIZE));
+                                content.setPosterUrl(getImageUrl(posterPath, DEFAULT_IMAGE_SIZE));
 
-                            // Populate or update fields from API data
-                            content.setPlot(getStringOrNull(TMDbObjectJson, "overview"));
-                            content.setRating(TMDbObjectJson.has("vote_average") ? TMDbObjectJson.get("vote_average").getAsDouble() : 0.0);
-                            content.setPopularity(TMDbObjectJson.has("popularity") ? (int) TMDbObjectJson.get("popularity").getAsDouble() : 0);
+                                String releaseDateStr = null;
+                                String title = null;
 
-                            String posterPath = getStringOrNull(TMDbObjectJson, "poster_path" );
-                            String backdropPath = getStringOrNull(TMDbObjectJson, "backdrop_path");
-                            content.setImageUrl(getImageUrl(backdropPath, DEFAULT_IMAGE_SIZE));
-                            content.setPosterUrl(getImageUrl(posterPath, DEFAULT_IMAGE_SIZE));
-
-                            String releaseDateStr = null;
-                            if (expectedType == ContentType.MOVIE) {
-                                content.setTitle(getStringOrNull(TMDbObjectJson, "title"));
-                                releaseDateStr = getStringOrNull(TMDbObjectJson, "release_date");
-                                content.Series(false);
-                            } else if (expectedType == ContentType.TV) {
-                                content.setTitle(getStringOrNull(TMDbObjectJson, "name"));
-                                releaseDateStr = getStringOrNull(TMDbObjectJson, "first_air_date");
-                                content.Series(true);
-                            }
-
-                            content.setReleaseDate(releaseDateStr);
-                            if (releaseDateStr != null && !releaseDateStr.isEmpty()) {
-                                try {
-                                    LocalDate date = LocalDate.parse(releaseDateStr, DateTimeFormatter.ISO_LOCAL_DATE);
-                                    content.setYear(date.getYear());
-                                } catch (DateTimeParseException e) {
-                                    System.err.println("TMDbApiManager: Could not parse year from date: " + releaseDateStr + " for " + content.getTitle());
-                                    content.setYear(0); // Default year if parsing fails
+                                switch (currentItemType) {
+                                    case MOVIE:
+                                        title = getStringOrNull(tmdbObjectJson, "title");
+                                        releaseDateStr = getStringOrNull(tmdbObjectJson, "release_date");
+                                        content.setIsSeries(false);
+                                        break;
+                                    case TV:
+                                        title = getStringOrNull(tmdbObjectJson, "name");
+                                        releaseDateStr = getStringOrNull(tmdbObjectJson, "first_air_date");
+                                        content.setIsSeries(true);
+                                        break;
                                 }
-                            } else {
-                                content.setYear(0); // Default year if no release date
-                            }
+                                content.setTitle(title);
+                                content.setOriginalTitle(getStringOrNull(tmdbObjectJson, (currentItemType == ContentType.TV ? "original_name" : "original_title")));
+                                content.setReleaseDate(releaseDateStr);
 
-                            if (TMDbObjectJson.has("genre_ids") && TMDbObjectJson.get("genre_ids").isJsonArray()) {
-                                JsonArray genreIdsArray = TMDbObjectJson.getAsJsonArray("genre_ids");
-                                List<Integer> categoryIds = new ArrayList<>();
-                                for (JsonElement genreIdElement : genreIdsArray) {
-                                    categoryIds.add(genreIdElement.getAsInt());
+                                if (releaseDateStr != null && !releaseDateStr.isEmpty()) {
+                                    try {
+                                        content.setYear(LocalDate.parse(releaseDateStr, DateTimeFormatter.ISO_LOCAL_DATE).getYear());
+                                    } catch (DateTimeParseException e) { content.setYear(0); }
+                                } else { content.setYear(0); }
+
+                                if (tmdbObjectJson.has("genre_ids") && tmdbObjectJson.get("genre_ids").isJsonArray()) {
+                                    JsonArray genreIdsArray = tmdbObjectJson.getAsJsonArray("genre_ids");
+                                    List<Integer> categoryIds = new ArrayList<>();
+                                    for (JsonElement genreIdElement : genreIdsArray) categoryIds.add(genreIdElement.getAsInt());
+                                    content.setCategories(categoryIds);
                                 }
-                                content.setCategories(categoryIds); // Overwrites existing categories from API
-                            }
-
-                            if (isNewInCache) {
-                                content.setVideoUrl("http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerFun.mp4"); ///////////////////////////////////////////////// Default video URL
-                            }
-
-                            if (isNewInCache)
+                                content.setVideoUrl("http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerFun.mp4"); // Default
                                 cacheManager.put(content);
-
+                            }
                             contentList.add(content);
                         }
                     }
                 }
             } catch (Exception e) {
-                System.err.println("TMDbApiManager: Failed to parse/map content from JSON for: " + endpoint + ". Error: " + e.getMessage() + ". Response: " + responseString.substring(0, Math.min(responseString.length(), 500)));
+                System.err.println("TMDbApiManager: Failed to parse/map content from JSON for: " + endpoint + ". Error: " + e.getMessage() + ". Response snippet: " + responseString.substring(0, Math.min(responseString.length(), 500)));
             }
             return contentList;
+        }, executor);
+    }
+
+    public CompletableFuture<Content> fetchFullContentDetails(int contentId, boolean isSeries) {
+        String typePath = isSeries ? "tv" : "movie";
+        String endpoint = "/" + typePath + "/" + contentId + "?append_to_response=credits,videos";
+        return makeRequestAsync(endpoint).thenApplyAsync(responseString -> {
+            if (responseString == null || responseString.isEmpty()) {
+                System.err.println("TMDbApiManager: Empty response for full details: " + endpoint);
+                throw new RuntimeException("Empty response for full details: " + contentId);
+            }
+            try {
+                JsonObject tmdbObjectJson = JsonParser.parseString(responseString).getAsJsonObject();
+                Content content = cacheManager.get(contentId);
+                if (content == null) {
+                    content = new Content();
+                    content.setId(contentId);
+                }
+
+                content.setIsSeries(isSeries);
+                content.setPlot(getStringOrNull(tmdbObjectJson, "overview"));
+                content.setRating(tmdbObjectJson.has("vote_average") ? tmdbObjectJson.get("vote_average").getAsDouble() : 0.0);
+                content.setPopularity(tmdbObjectJson.has("popularity") ? (int) tmdbObjectJson.get("popularity").getAsDouble() : 0);
+
+                String posterPath = getStringOrNull(tmdbObjectJson, "poster_path");
+                String backdropPath = getStringOrNull(tmdbObjectJson, "backdrop_path");
+                content.setImageUrl(getImageUrl(backdropPath, BACKDROP_IMAGE_SIZE_DETAILS));
+                content.setPosterUrl(getImageUrl(posterPath, DEFAULT_IMAGE_SIZE));
+
+                List<String> genreNames = new ArrayList<>();
+                if (tmdbObjectJson.has("genres") && tmdbObjectJson.get("genres").isJsonArray()) {
+                    for (JsonElement genreElement : tmdbObjectJson.getAsJsonArray("genres")) {
+                        genreNames.add(genreElement.getAsJsonObject().get("name").getAsString());
+                    }
+                }
+                content.setGenreNames(genreNames);
+
+                if (isSeries) {
+                    content.setTitle(getStringOrNull(tmdbObjectJson, "name"));
+                    content.setOriginalTitle(getStringOrNull(tmdbObjectJson, "original_name"));
+                    String firstAirDate = getStringOrNull(tmdbObjectJson, "first_air_date");
+                    content.setReleaseDate(firstAirDate);
+                    if (firstAirDate != null && !firstAirDate.isEmpty()) {
+                        try { content.setYear(LocalDate.parse(firstAirDate).getYear()); } catch (DateTimeParseException e) { content.setYear(0); }
+                    }
+                    content.setNumberOfSeasons(tmdbObjectJson.has("number_of_seasons") ? tmdbObjectJson.get("number_of_seasons").getAsInt() : 0);
+                    content.setNumberOfEpisodes(tmdbObjectJson.has("number_of_episodes") ? tmdbObjectJson.get("number_of_episodes").getAsInt() : 0);
+                    if (tmdbObjectJson.has("episode_run_time") && tmdbObjectJson.get("episode_run_time").isJsonArray()) {
+                        JsonArray runtimes = tmdbObjectJson.getAsJsonArray("episode_run_time");
+                        if (runtimes.size() > 0) content.setRuntimeMinutes(runtimes.get(0).getAsInt());
+                    }
+                } else { // Movie
+                    content.setTitle(getStringOrNull(tmdbObjectJson, "title"));
+                    content.setOriginalTitle(getStringOrNull(tmdbObjectJson, "original_title"));
+                    String releaseDate = getStringOrNull(tmdbObjectJson, "release_date");
+                    content.setReleaseDate(releaseDate);
+                    if (releaseDate != null && !releaseDate.isEmpty()) {
+                        try { content.setYear(LocalDate.parse(releaseDate).getYear()); } catch (DateTimeParseException e) { content.setYear(0); }
+                    }
+                    content.setRuntimeMinutes(tmdbObjectJson.has("runtime") && !tmdbObjectJson.get("runtime").isJsonNull() ? tmdbObjectJson.get("runtime").getAsInt() : 0);
+                }
+
+                if (tmdbObjectJson.has("production_countries") && tmdbObjectJson.get("production_countries").isJsonArray()) {
+                    JsonArray countriesArray = tmdbObjectJson.getAsJsonArray("production_countries");
+                    if (countriesArray.size() > 0) content.setCountry(countriesArray.get(0).getAsJsonObject().get("name").getAsString());
+                }
+
+                if (tmdbObjectJson.has("videos") && tmdbObjectJson.getAsJsonObject("videos").has("results")) {
+                    JsonArray videos = tmdbObjectJson.getAsJsonObject("videos").getAsJsonArray("results");
+                    for (JsonElement videoEl : videos) {
+                        JsonObject videoObj = videoEl.getAsJsonObject();
+                        if ("Trailer".equalsIgnoreCase(getStringOrNull(videoObj, "type")) && "YouTube".equalsIgnoreCase(getStringOrNull(videoObj, "site"))) {
+                            content.setVideoUrl("https://www.youtube.com/watch?v=" + getStringOrNull(videoObj, "key"));
+                            break;
+                        }
+                    }
+                }
+                if (content.getVideoUrl() == null || content.getVideoUrl().isEmpty() || !content.getVideoUrl().startsWith("https://www.youtube.com")) {
+                    content.setVideoUrl("http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerFun.mp4");
+                }
+
+                cacheManager.put(content);
+                return content;
+            } catch (Exception e) {
+                System.err.println("TMDbApiManager: Failed to parse full details for ID: " + contentId + ". Error: " + e.getMessage());
+                throw new RuntimeException("Failed to parse full details for ID: " + contentId, e);
+            }
+        }, executor);
+    }
+
+    public CompletableFuture<ApiSeasonDetails> fetchTvSeasonDetails(int seriesId, int seasonNumber) {
+        String endpoint = "/tv/" + seriesId + "/season/" + seasonNumber;
+        return makeRequestAsync(endpoint).thenApplyAsync(responseString -> {
+            if (responseString == null || responseString.isEmpty()) {
+                System.err.println("TMDbApiManager: Empty response for TV season: " + endpoint);
+                throw new RuntimeException("Empty response for TV season " + seriesId + " S" + seasonNumber);
+            }
+            try {
+                JsonObject seasonJson = JsonParser.parseString(responseString).getAsJsonObject();
+                ApiSeasonDetails seasonDetails = new ApiSeasonDetails();
+                seasonDetails.id = seasonJson.get("id").getAsInt();
+                seasonDetails.seasonNumber = seasonJson.get("season_number").getAsInt();
+                seasonDetails.name = getStringOrNull(seasonJson, "name");
+                if (seasonDetails.name == null || seasonDetails.name.isEmpty()) {
+                    seasonDetails.name = "Season " + seasonDetails.seasonNumber;
+                }
+                seasonDetails.overview = getStringOrNull(seasonJson, "overview");
+                seasonDetails.posterPath = getStringOrNull(seasonJson, "poster_path");
+                seasonDetails.airDate = getStringOrNull(seasonJson, "air_date");
+
+                if (seasonJson.has("episodes") && seasonJson.get("episodes").isJsonArray()) {
+                    for (JsonElement episodeElement : seasonJson.getAsJsonArray("episodes")) {
+                        JsonObject epJson = episodeElement.getAsJsonObject();
+                        ApiEpisodeDetails epDetails = new ApiEpisodeDetails();
+                        epDetails.id = epJson.get("id").getAsInt();
+                        epDetails.episodeNumber = epJson.get("episode_number").getAsInt();
+                        epDetails.name = getStringOrNull(epJson, "name");
+                        epDetails.overview = getStringOrNull(epJson, "overview");
+                        epDetails.stillPath = getStringOrNull(epJson, "still_path");
+                        epDetails.runtime = epJson.has("runtime") && !epJson.get("runtime").isJsonNull() ? epJson.get("runtime").getAsInt() : 0;
+                        epDetails.airDate = getStringOrNull(epJson, "air_date");
+                        epDetails.voteAverage = epJson.has("vote_average") ? epJson.get("vote_average").getAsDouble() : 0.0;
+                        seasonDetails.episodes.add(epDetails);
+                    }
+                }
+                return seasonDetails;
+            } catch (Exception e) {
+                System.err.println("TMDbApiManager: Failed to parse TV season for series " + seriesId + " S" + seasonNumber + ". Error: " + e.getMessage());
+                throw new RuntimeException("Failed to parse TV season details", e);
+            }
         }, executor);
     }
 
@@ -240,7 +396,6 @@ public class TMDbApiManager {
         return null;
     }
 
-    // --- Methods for fetching different content types ---
     public CompletableFuture<List<Content>> getTrendingMoviesAsMoviestarContent(String timeWindow) {
         return fetchAsMoviestarContentList("/trending/movie/" + timeWindow, ContentType.MOVIE);
     }
@@ -263,88 +418,61 @@ public class TMDbApiManager {
             return CompletableFuture.failedFuture(new IllegalStateException("ContentDao not initialized."));
         }
 
-        // Fetching operations will now use the cache-aware fetchAsMoviestarContentList
-        CompletableFuture<List<Content>> popularMoviesFuture = getPopularMoviesAsMoviestarContent();
-        CompletableFuture<List<Content>> trendingMoviesDayFuture = getTrendingMoviesAsMoviestarContent("day");
-        CompletableFuture<List<Content>> popularTvShowsFuture = getPopularTvShowsAsMoviestarContent();
-        CompletableFuture<List<Content>> trendingTvDayFuture = getTrendingTvShowsAsMoviestarContent("day");
-
         List<CompletableFuture<List<Content>>> futures = List.of(
-                popularMoviesFuture, trendingMoviesDayFuture,
-                popularTvShowsFuture, trendingTvDayFuture
+                getPopularMoviesAsMoviestarContent(),
+                getTrendingMoviesAsMoviestarContent("day"),
+                getPopularTvShowsAsMoviestarContent(),
+                getTrendingTvShowsAsMoviestarContent("day")
         );
 
         return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
                 .thenComposeAsync(voidResult -> {
-                    List<Content> allContentFromApi = new ArrayList<>();
-                    for (CompletableFuture<List<Content>> future : futures) {
-                        try {
-                            allContentFromApi.addAll(future.join());
-                        } catch (Exception e) {
-                            System.err.println("TMDbApiManager: Error joining future during content update: " + e.getMessage());
-                        }
-                    }
-
-                    List<Content> distinctContentToStore = allContentFromApi.stream()
-                            .filter(Objects::nonNull)
-                            .filter(c -> c.getId() != 0)
+                    List<Content> allContentFromApi = futures.stream()
+                            .flatMap(future -> {
+                                try { return future.join().stream(); }
+                                catch (Exception e) {
+                                    System.err.println("TMDbApiManager: Error joining future: " + e.getMessage());
+                                    return Stream.empty();
+                                }
+                            })
+                            .filter(Objects::nonNull).filter(c -> c.getId() != 0)
                             .filter(distinctByKey(Content::getId))
                             .collect(Collectors.toList());
 
-                    if (!distinctContentToStore.isEmpty()) {
+                    if (!allContentFromApi.isEmpty()) {
                         try {
-                            System.out.println("TMDbApiManager: Passing " + distinctContentToStore.size() + " distinct content items (from cache/API) to DAO for DB update.");
-                            contentDao.insertContents(distinctContentToStore);
-                            System.out.println("TMDbApiManager: Database update process complete via DAO.");
+                            contentDao.insertContents(allContentFromApi);
                         } catch (Exception e) {
-                            System.err.println("TMDbApiManager: Error during contentDao.insertContents: " + e.getMessage());
+                            System.err.println("TMDbApiManager: Error during DAO insert: " + e.getMessage());
                             return CompletableFuture.failedFuture(e);
                         }
-                    } else {
-                        System.out.println("TMDbApiManager: No distinct content from API to update in the database.");
                     }
                     return CompletableFuture.completedFuture(null);
                 }, executor);
     }
 
-    // Helper for distinctByKey using a ConcurrentHashMap for thread-safety if stream is parallel (though not here)
-    private static <T> Predicate<T> distinctByKey(Function<? super T, ?> keyExtractor ) {
+    private static <T> Predicate<T> distinctByKey(Function<? super T, ?> keyExtractor) {
         Set<Object> seen = ConcurrentHashMap.newKeySet();
         return t -> seen.add(keyExtractor.apply(t));
     }
 
-    // --- Search logic (remains, with URL encoding for query) ---
-    public CompletableFuture<List<Content>> searchMoviesAsMoviestarContent (String query) {
+    public CompletableFuture<List<Content>> searchMultiContent(String query, int page) {
         String encodedQuery;
-        encodedQuery =  URLEncoder.encode( query, StandardCharsets.UTF_8);
-        String  endpointWithQuery = "/search/movie?query=" + encodedQuery;
-        return fetchAsMoviestarContentList(endpointWithQuery, ContentType.MOVIE );
-    }
-
-    public CompletableFuture<List<Content>> searchTvShowsAsMoviestarContent(String query) {
-        String encodedQuery;
-        encodedQuery = URLEncoder.encode( query, StandardCharsets.UTF_8);
-        String endpointWithQuery = "/search/tv?query=" + encodedQuery;
-        return fetchAsMoviestarContentList(endpointWithQuery, ContentType.TV);
+        try {
+            encodedQuery = URLEncoder.encode(query, StandardCharsets.UTF_8.name());
+        } catch (UnsupportedEncodingException e) {
+            System.err.println("TMDbApiManager: UTF-8 encoding error: " + e.getMessage());
+            return CompletableFuture.failedFuture(new RuntimeException("Failed to encode query.", e));
+        }
+        String endpointWithQuery = "/search/multi?query=" + encodedQuery + "&page=" + page + "&include_adult=false";
+        return fetchAsMoviestarContentList(endpointWithQuery, ContentType.UNKNOWN);
     }
 
     @Nullable
     public String getImageUrl(@Nullable String imagePath, String size) {
-        if (imagePath == null || imagePath.isEmpty()) {
+        if (imagePath == null || imagePath.trim().isEmpty() || "null".equalsIgnoreCase(imagePath.trim())) {
             return null;
         }
-        return IMAGE_BASE_URL + size + imagePath;
+        return IMAGE_BASE_URL + size + (imagePath.startsWith("/") ? imagePath : "/" + imagePath);
     }
-
-
-    @Nullable
-    public String getPosterUrl(@Nullable String posterPath, String size) {
-        return getImageUrl(posterPath, size);
-    }
-
-    @Nullable
-    public String getBackdropUrl(@Nullable String backdropPath, String size) {
-        return getImageUrl(backdropPath, size);
-    }
-
 }
